kubernetes/argo-cd/gloo-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: argo-cd-routes
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: argo-cd-certificate
      namespace: cert-manager
    sniDomains:
      - argo.cloud.danieltharp.com
  virtualHost:
    domains:
      - argo.cloud.danieltharp.com
    routes:
      - matchers:
        - prefix: /.well-known/acme-challenge/
        delegateAction:
          ref:
            name: cert-manager-routes
            namespace: gloo-system
      - matchers:
          - prefix: /  # Everything
        routeAction:
          single:
            kube:
              ref:
                name: argo-cd-argocd-server
                namespace: argo-cd
              port: 80
